--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-//registry.npmjs.org/:_authToken=da300f5cbac76393ba75bc3856f8b43031b6c8a1
+//npm.pkg.github.com/:_authToken=18f9f04cdfe77978cdb4f023b5445b164af3a27b
+@sabasayer:registry=https://npm.pkg.github.com
