--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,1 @@
-//npm.pkg.github.com/:_authToken=1bf609e1c8e87850abf40f8ac57386650dc8c750
-@sabasayer:registry=https://npm.pkg.github.com
+//registry.npmjs.org/:_authToken=8a54e3d9-0cdc-482e-bea2-3bd4a4f8f8b5
